# umd-api-python

./: .gitignore  README.md  course-client.py  professor-client.py  pyproject.toml
.github/workflows/: release.yml
src/: __init__.py  base_api.py  bus.py  courses.py  majors.py  map.py  professors.py
umd_api/: __init__.py
umd_api/weather/: __init__.py  weather.py
